# weni-agent-evaluation

./: 404.html  README.md  index.html  objects.inv  pyproject.toml  setup.py
cicd/: index.html
cli/: index.html
configuration/: index.html
docs/: index.md  user_guide.md
docs/evaluators/: index.md
evaluators/: index.html
hooks/: index.html
installation/: index.html
overrides/: main.html
reference/base_target/: index.html
reference/hook/: index.html
reference/target_response/: index.html
reference/test/: index.html
reference/test_result/: index.html
reference/trace/: index.html
search/: search_index.json
src/agenteval/evaluators/: evaluator_factory.py
src/agenteval/evaluators/bedrock_request/: bedrock_request_handler.py
src/agenteval/evaluators/canonical/: evaluator.py
src/agenteval/evaluators/model_config/: preconfigured_model_configs.py
targets/: index.html
targets/bedrock_agents/: index.html
targets/bedrock_flows/: index.html
targets/bedrock_knowledge_bases/: index.html
targets/custom_targets/: index.html
targets/lex_v2/: index.html
targets/q_business/: index.html
targets/sagemaker_endpoints/: index.html
targets/weni/: index.html
user_guide/: index.html
